Added folder icon

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Centered Icon Grid -->
         <div class="icon-grid">
             <div class="desktop-icon" onclick="openWindow('projects')">
-                <img src="assets/folder-icon.png" alt="Projects">
+                <img src="assets/icons/folder.png" alt="Projects">
                 <p>Projects</p>
             </div>
             <div class="desktop-icon" onclick="openWindow('about')">
