--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                 <p>Projects</p>
             </div>
             <div class="desktop-icon" onclick="openWindow('about')">
-                <img src="assets/user-icon.png" alt="About Me">
+                <img src="assets/icons/me.png" alt="About Me">
                 <p>About Me</p>
             </div>
             <div class="desktop-icon" onclick="openWindow('contact')">
-                <img src="assets/mail-icon.png" alt="Contact">
+                <img src="assets/icons/pc.png" alt="Contact">
                 <p>Contact</p>
             </div>
         </div>
