--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="desktop">
         <div class="taskbar">
-            <div class="start-menu">⚙️</div>
+            <div class="start-menu">Start</div>
             <div class="taskbar-icons">
                 <span class="time" id="time"></span>
             </div>
