Added music play

--- a/index.html
+++ b/index.html
@@ -15,6 +15,25 @@
             </div>
         </div>
 
+        <div class="now-playing">
+            Currently playing: <span id="current-song">None</span>
+        </div>
+
+        <div class="music-window">
+    <div class="window-header">Now Playing</div>
+    <iframe 
+        style="border-radius:12px"
+        src="https://open.spotify.com/embed/track/3n3Ppam7vgaVa1iaRUc9Lp?utm_source=generator"
+        width="300" 
+        height="80" 
+        frameborder="0" 
+        allowfullscreen="" 
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+        loading="lazy">
+    </iframe>
+</div>
+
+
         <div class="icon-grid">
             <div class="desktop-icon" onclick="openWindow('projects')">
                 <img src="assets/icons/folder.png" alt="Projects">
