Added spotify embedding

--- a/index.html
+++ b/index.html
@@ -15,23 +15,25 @@
             </div>
         </div>
 
-        <div class="now-playing">
-            Currently playing: <span id="current-song">None</span>
-        </div>
-
         <div class="music-window">
-    <div class="window-header">Now Playing</div>
-    <iframe 
-        style="border-radius:12px"
-        src="https://open.spotify.com/embed/track/3n3Ppam7vgaVa1iaRUc9Lp?utm_source=generator"
-        width="300" 
-        height="80" 
-        frameborder="0" 
-        allowfullscreen="" 
-        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-        loading="lazy">
-    </iframe>
-</div>
+        <div class="window-header">now playing</div>
+
+            <div class="preview-box" onclick="window.open('https://open.spotify.com/track/3KkXRkHbMCARz0aVfEt68P', 'popup', 'width=800,height=800,left=100,top=100')">
+                <p>sunflower by post malone, swae lee</p>
+            </div>
+
+            <div class="preview-box" onclick="window.open('https://open.spotify.com/track/7mykoq6R3BArsSpNDjFQTm?si=a96699fe3aeb47f7', 'popup', 'width=800,height=800,left=100,top=100')">
+                <p>i really want to stay at your house by rosa walton, hallie coggins</p>
+            </div>
+
+            <div class="preview-box" onclick="window.open('https://open.spotify.com/track/2pl1Yo26URVBFQRrJXvyuX?si=e195a5c41039429c', 'popup', 'width=800,height=800,left=100,top=100')">
+                <p>goodbye by toe</p>
+            </div>
+
+            <div class="preview-box" onclick="window.open('https://open.spotify.com/track/5sPKAEb7afrIMtdqEnI6H6?si=0d83531a65a042aa', 'popup', 'width=800,height=800,left=100,top=100')">
+                <p>young girl a by siinamota</p>
+            </div>
+        </div>
 
 
         <div class="icon-grid">
