Added icon dragging & snapping for desktop

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
 
         <div class="music-window">
-        <div class="window-header">now playing</div>
+        <div class="window-header">now playing: favourite songs </div>
 
             <div class="preview-box" onclick="window.open('https://open.spotify.com/track/3KkXRkHbMCARz0aVfEt68P', 'popup', 'width=800,height=800,left=100,top=100')">
                 <p>sunflower by post malone, swae lee</p>
