Added basic start menu functionality

--- a/index.html
+++ b/index.html
@@ -9,9 +9,20 @@
 <body>
     <div class="desktop">
         <div class="taskbar">
-            <div class="start-menu">Start</div>
+            <input type="checkbox" id="start-toggle" class="start-toggle">
+            <label for="start-toggle" class="start-menu">start</label>
+
             <div class="taskbar-icons">
                 <span class="time" id="time"></span>
+            </div>
+
+            <div class="start-menu-box">
+                <ul>
+                    <li>projects</li>
+                    <li>about me</li>
+                    <li>contact</li>
+                    <li>shutdown</li>
+                </ul>
             </div>
         </div>
 
