Fixed icons not showing

--- a/index.html
+++ b/index.html
@@ -17,12 +17,32 @@
             </div>
 
             <div class="start-menu-box">
-                <ul>
-                    <li>projects</li>
-                    <li>about me</li>
-                    <li>contact</li>
-                    <li>shutdown</li>
-                </ul>
+
+                <div class="start-section">
+                    <div class="start-section-title">pinned</div>
+                    <div class="start-apps">
+                        <div class="start-app">
+                            <img src="assets/icons/Null.png" alt="">
+                            <span>Placeholder 1</span>
+                        </div>
+                        <div class="start-app">
+                            <img src="assets/icons/Null.png" alt="">
+                            <span>Placeholder 2</span>
+                        </div>
+                        <div class="start-app">
+                            <img src="assets/icons/Null.png" alt="">
+                            <span>Placeholder 3</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="start-section">
+                    <div class="start-section-title">recommended</div>
+                    <div class="start-recommendation">
+                        <strong>test</strong>
+                        <div class="recommend-sub">also check out</div>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -48,17 +68,29 @@
 
 
         <div class="icon-grid">
-            <div class="desktop-icon" onclick="openWindow('projects')">
-                <img src="assets/icons/folder.png" alt="Projects">
+            <div class="desktop-icon" style="left: 0px; top: 0px"; onclick="openWindow('projects')">
+                <img src="assets/icons/Folder.png" alt="Projects">
                 <p>Projects</p>
             </div>
-            <div class="desktop-icon" onclick="openWindow('about')">
-                <img src="assets/icons/me.png" alt="About Me">
+            <div class="desktop-icon" style="left: 0px; top: 100px"; onclick="openWindow('about')">
+                <img src="assets/icons/Me.png" alt="About Me">
                 <p>About Me</p>
             </div>
-            <div class="desktop-icon" onclick="openWindow('contact')">
-                <img src="assets/icons/pc.png" alt="Contact">
+            <div class="desktop-icon" style="left: 0px; top: 200px"; onclick="openWindow('contact')">
+                <img src="assets/icons/Pc.png" alt="Contact">
                 <p>Contact</p>
+            </div>
+            <div class="desktop-icon" style="left: 100px; top: 100px"; onclick="openWindow('gallery')">
+                <img src="assets/icons/Camera.png" alt="Gallery">
+                <p>Gallery</p>
+            </div>
+            <div class="desktop-icon" style="left: 100px; top: 0px"; onclick="openWindow('sandbox')">
+                <img src="assets/icons/Sandbox.png" alt="Sandbox">
+                <p>Sandbox</p>
+            </div>
+            <div class="desktop-icon" style="left: 200px; top: 0px"; onclick="openWindow('skills')">
+                <img src="assets/icons/Hammer.png" alt="Skills">
+                <p>Skills</p>
             </div>
         </div>
 
