Added taskbar date/time

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <input type="checkbox" id="start-toggle" class="start-toggle">
             <label for="start-toggle" class="start-menu">start</label>
 
-            <div class="taskbar-icons">
-                <span class="time" id="time"></span>
+            <div class="taskbar-clock" id="taskbar-clock">
+                
             </div>
 
             <div class="start-menu-box">
