--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
                         <div class="recommend-sub">also check out</div>
                     </div>
                 </div>
+
+                <div class="selected-box" id="selected-box">
+                    
+                </div>
             </div>
         </div>
 
